--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.dbg.so filter=lfs diff=lfs merge=lfs -text
 *.sym.so filter=lfs diff=lfs merge=lfs -text
 *.dylib filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
